--- a/src/layouts/BlogPost.astro
+++ b/src/layouts/BlogPost.astro
@@ -4,6 +4,7 @@ import Header from "../components/Header.astro";
 import Footer from "../components/Footer.astro";
 import BtnUp from "../components/BtnUp.astro";
 import ProgresBar from "../components/ProgresBar.astro";
+import "../styles/prism.css";
 
 export interface Props {
   content: {
@@ -77,5 +78,38 @@ const {
         border-radius: 10px;
       }
     </style>
+    <script is:inline>
+      function enableCopy(
+        selector = "pre",
+        childSelector = "code",
+        btnText = "📋",
+        btnTextSuccess = "Copied✅",
+        activeClass = "copy"
+      ) {
+        document
+          .querySelectorAll(`${selector}:not(.${activeClass})`)
+          .forEach((node) => {
+            // create a "copy" button
+            let copyBtn = document.createElement("button");
+            copyBtn.innerText = btnText;
+            // activeClass acts as flag so we don't add another copy button by  mistake
+            copyBtn.classList.add(activeClass);
+            node.appendChild(copyBtn);
+            copyBtn.addEventListener("click", async () => {
+              // get the code to copy
+              let code = node.querySelector(childSelector).innerText;
+              // copy to clipboard
+              await navigator.clipboard.writeText(code);
+              // change button text
+              copyBtn.innerText = btnTextSuccess;
+              // reset button text after 1 second
+              setTimeout(() => {
+                copyBtn.innerText = btnText;
+              }, 1000);
+            });
+          });
+      }
+      enableCopy();
+    </script>
   </body>
 </html>
