--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,18 +1,11 @@
-@import url('https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;800&family=Varta:wght@400;500;600&display=swap');
-@import "https://unpkg.com/open-props";
-@import "https://unpkg.com/open-props/normalize.min.css";
-
-
-  
+/* @import url('https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;800&family=Varta:wght@400;500;600&display=swap');
 
 body {
 	font-family: 'Varta', sans-serif;
 	padding: var(--size-fluid-3);
 	
 }
-:where(p) {
-     max-inline-size: var(--size-content-6)!important;
-}
+
 
 h1,
 h2,
@@ -21,10 +14,4 @@ h4,
 h5 {
 	font-family: 'Inter', sans-serif;
 }
-
-@media screen and (min-width: 992px) {
-	body {
-		padding-inline: var(--size-fluid-8);
-	}
-
-}
+ */
