Habilitar Modo Oscuro, Landing Page, Otros

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -3,12 +3,6 @@ const today = new Date();
 ---
 
 <footer>
-	&copy; {today.getFullYear()} JCEKM. PAGINA SIN FINES LUCRATIVOS.
+	<div class="text-gray-400 text-sm text-center py-8 font-mono">&copy; {today.getFullYear()} JCEKM. UNA PAGINA DE JCEKM.</div>
 </footer>
-<style>
-	footer {
-		padding: 25px;
-		margin-top: 20px;
-		text-align: center;
-	}
-</style>
+
