--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -19,7 +19,7 @@ import ToggleTheme from "./ToggleTheme.astro";
             <HeaderLink href="/">Inicio</HeaderLink>
           </li>
           <li>
-            <HeaderLink href="/blog">Post</HeaderLink>
+            <HeaderLink href="/blog">Blog</HeaderLink>
           </li>
           <li>
             <HeaderLink href="https://jcekm.vercel.app/About" target="_blank"
@@ -77,5 +77,17 @@ import ToggleTheme from "./ToggleTheme.astro";
     font-weight: 600;
     letter-spacing: 1px;
     opacity: 0.9;
+  }
+
+  /* Dispositivos moviles */
+  @media (max-width: 768px) {
+    li a {
+      font-size: 14px;
+    }
+    ul{
+      padding: 14px 0;
+      margin-right: 10px;
+    }
+    
   }
 </style>
