--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,17 +1,2 @@
-/* @import url('https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;800&family=Varta:wght@400;500;600&display=swap');
-
-body {
-	font-family: 'Varta', sans-serif;
-	padding: var(--size-fluid-3);
-	
-}
-
-
-h1,
-h2,
-h3,
-h4,
-h5 {
-	font-family: 'Inter', sans-serif;
-}
- */
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;800&family=Varta:wght@400;500;600&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Red+Hat+Mono:wght@300;400;600&display=swap');
