--- a/src/styles/prism.css
+++ b/src/styles/prism.css
@@ -3,7 +3,7 @@
  code[class*="language-"],
 pre[class*="language-"] {
 	color: #d6deeb;
-	font-family: Consolas, Monaco, "Andale Mono", "Ubuntu Mono", monospace;
+	font-family: 'Red Hat Mono',Consolas, Monaco, "Andale Mono", "Ubuntu Mono", monospace;
 	text-align: left;
 	white-space: pre;
 	word-spacing: normal;
