--- a/src/components/SearchInput.astro
+++ b/src/components/SearchInput.astro
@@ -1,12 +1,27 @@
-<section>
-  <div style="display: flex;
-  justify-content: center;
-  align-items: center;">
+<section class="flex items-center">
+  <label for="simple-search" class="sr-only">Search</label>
+  <div class="relative w-full">
+    <div
+      class="absolute inset-y-0 left-0 flex items-center pl-3 pointer-events-none"
+    >
+      <svg
+        aria-hidden="true"
+        class="w-5 h-5 text-gray-500 dark:text-sky-400"
+        fill="currentColor"
+        viewBox="0 0 20 20"
+        xmlns="http://www.w3.org/2000/svg"
+        ><path
+          fill-rule="evenodd"
+          d="M8 4a4 4 0 100 8 4 4 0 000-8zM2 8a6 6 0 1110.89 3.476l4.817 4.817a1 1 0 01-1.414 1.414l-4.816-4.816A6 6 0 012 8z"
+          clip-rule="evenodd"></path>
+      </svg>
+    </div>
     <input
       type="text"
       id="searchBox"
       placeholder="Buscar..."
-      style="width: 50%;"
+      class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full pl-10 p-2.5 dark:bg-gray-700 dark:border-sky-600 dark:placeholder-cyan-400 dark:text-cyan-400 dark:focus:ring-sky-500 dark:focus:border-sky-500"
+      required
     />
   </div>
 </section>
@@ -28,7 +43,7 @@
         for (var filtro of palabrasEnFiltro) {
           if (h2.innerHTML.toUpperCase().indexOf(filtro) > -1) {
             hallado++;
-          } 
+          }
         }
 
         if (hallado === palabrasEnFiltro.length) {
@@ -41,5 +56,4 @@
       }
     }
   });
-
 </script>
