--- a/src/components/Card.astro
+++ b/src/components/Card.astro
@@ -1,63 +1,41 @@
 ---
-const { title, date, heroImage, link ,heroImageAlt} = Astro.props;
+const { title, date, heroImage, link, heroImageAlt } = Astro.props;
 ---
 
 <a href={link}>
-  <div class="card">
-    <div>
-      <img src={heroImage} alt={heroImageAlt}/>
+  <div
+    class="bg-white shadow-md border border-gray-200 rounded-lg max-w-sm dark:bg-slate-800 dark:border-gray-900 card"
+  >
+    <div class="group h-48 md:h-64 block overflow-hidden relative">
+      <img
+        class="rounded-t-lg w-full h-full object-cover object-center absolute inset-0 group-hover:scale-110 transition duration-200"
+        loading="lazy"
+        src={heroImage}
+        alt={heroImageAlt}
+      />
     </div>
-    <div class="card-content">
-      <h2>{title}</h2>
-      <p>{date}</p>
+    <div class="p-5">
+      <h3
+        class="text-gray-900 font-bold text-2xl tracking-tight mb-2 dark:text-white text-left"
+      >
+        {title}
+      </h3>
+      <p class="font-normal text-gray-700 mb-3 dark:text-gray-400">{date}</p>
     </div>
   </div>
 </a>
 <style>
-  img {
-    width: 100%;
-    height: 100%;
-  }
   .card {
-    width: 100%;
-    height: 100%;
-    max-width: 400px;
-    max-height: 400px;
-    justify-content: center;
-    align-items: center;
-    box-shadow: var(--shadow-2);
-    border-radius: var(--border-radius-2);
     animation-duration: 2s;
     animation-name: fadein;
   }
-  .card:hover {
-    box-shadow: var(--shadow-6);
-  }
-  .card-content{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-  }
-    @keyframes fadein {
-        from {
-        opacity: 0;
-        }
-        to {
-        opacity: 1;
-        }
+
+  @keyframes fadein {
+    from {
+      opacity: 0;
     }
-  a {
-    text-decoration: none;
-    color: inherit;
-  }
-  h2 {
-    font-size: var(--font-size-fluid-1);
-    padding: 1rem;
-  }
-  p {
-    font-size: var(--font-size-fluid-0);
-    margin: 0;
-    font-style: italic;
+    to {
+      opacity: 1;
+    }
   }
 </style>
