--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -1,6 +1,5 @@
 ---
-import BaseHead from "../components/BaseHead.astro";
-import Header from "../components/Header.astro";
+import MainLayout from "../layouts/MainLayout.astro";
 import Footer from "../components/Footer.astro";
 import Card from "../components/Card.astro";
 import BtnUp from "../components/BtnUp.astro";
@@ -16,87 +15,42 @@ const posts = (await Astro.glob("./blog/*.{md,mdx}")).sort(
 );
 ---
 
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <BaseHead title={SITE_TITLE} description={SITE_DESCRIPTION} />
-    <style>
-      h1 {
-        margin: 10px;
-      }
-      ul {
-        list-style-type: none;
-        padding: unset;
-      }
-      ul li {
-        display: flex;
-      }
-      ul li time {
-        flex: 0 0 130px;
-        font-style: italic;
-        color: #595959;
-      }
-      ul li a:visited {
-        color: #8e32dc;
-      }
-    </style>
-  </head>
-  <body>
-    <Header />
-    <BtnUp />
-    <main>
-      <section>
-        <h1>Blog</h1>
-        <div>
-          <SearchInput />
+<MainLayout>
+  <BtnUp />
+  <section>
+    <div class=" py-6 sm:py-8 lg:py-12">
+      <div class="max-w-screen-2xl px-4 md:px-8 mx-auto">
+        <!-- text - start -->
+        <div class="mb-10 md:mb-16">
+          <h2 class="text-gray-800 dark:text-blue-50 text-2xl lg:text-3xl font-bold text-center mb-4 md:mb-6">Blog</h2>
+    
+          <div>
+            <SearchInput />
+          </div>
         </div>
-        <div class="grid" id="posts">
-          {
-            posts.map((post) => (
-              <div class="col-span-1">
-                <Card
-                  link={post.url}
-                  title={post.frontmatter.title}
-                  date={new Date(post.frontmatter.pubDate).toLocaleDateString(
-                    "es-mx",
-                    {
-                      year: "numeric",
-                      month: "short",
-                      day: "numeric",
-                    }
-                  )}
-                  heroImage={post.frontmatter.heroImage}
-                  heroImageAlt={post.frontmatter.heroImageAlt}
-                />
-              </div>
-            ))
-          }
-        </div>
-      </section>
-    </main>
-    <Footer />
-    <style>
-      .grid {
-        display: grid;
-        grid-template-columns: 1fr 1fr 1fr;
-        grid-gap: 10px;
-        margin: 10px;
+     </div>
+    </div>
+    <div class="grid sm:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4 gap-4 md:gap-6 xl:gap-8" id="posts">
+      {
+        posts.map((post) => (
+          <div >
+            <Card
+              link={post.url}
+              title={post.frontmatter.title}
+              date={new Date(post.frontmatter.pubDate).toLocaleDateString(
+                "es-mx",
+                {
+                  year: "numeric",
+                  month: "short",
+                  day: "numeric",
+                }
+              )}
+              heroImage={post.frontmatter.heroImage}
+              heroImageAlt={post.frontmatter.heroImageAlt}
+            />
+          </div>
+        ))
       }
-      h1 {
-        margin-bottom: 20px;
-      }
-
-      @media (max-width: 768px) {
-        .grid {
-          grid-template-columns: 1fr 1fr;
-        }
-      }
-
-      @media (max-width: 480px) {
-        .grid {
-          grid-template-columns: 1fr;
-        }
-      }
-    </style>
-  </body>
-</html>
+    </div>
+  </section>
+</MainLayout>
