--- a/src/layouts/BlogPost.astro
+++ b/src/layouts/BlogPost.astro
@@ -39,44 +39,48 @@ const {
     <ProgresBar />
     <BtnUp />
     <main>
-      <article>
+      <article class="max-w-4xl m-0 " style="margin: auto; padding: 0 1rem;">
         {
           heroImage && (
-            <img width={720} height={360} src={heroImage} alt={heroImageAlt} />
+            <img
+              width={720}
+              height={360}
+              class="rounded-t-lg w-full h-full"
+              src={heroImage}
+              alt={heroImageAlt}
+            />
           )
         }
-        <h1>{title}</h1>
-        {pubDate && <time>{pubDate}</time>}
+        <h1
+          class="text-gray-900 font-bold text-5xl tracking-tight mb-2 mt-2 dark:text-white"
+        >
+          {title}
+        </h1>
+        <p class="dark:text-blue-50">{pubDate && <time>{pubDate}</time>}</p>
         {
           updatedDate && (
             <div>
-              Last updated on <time>{updatedDate}</time>
+              <p class="dark:text-blue-50">
+                {" "}
+                Ultima vez actualizado <time>{updatedDate}</time>
+              </p>
             </div>
           )
         }
-        <hr />
-        <slot />
+        <hr class="border-r-1 border-black dark:border-cyan-100" />
+        <br />
+        <div class="prose lg:prose-xl dark:prose-invert"><slot/></div>
+        
       </article>
     </main>
     <Footer />
 
     <style>
-      article {
+      /*  article {
         max-width: 750px;
         margin: 0 auto;
-        padding: 0 1rem;
-      }
-
-      hr {
-        border-top: 1px solid #ddd;
-        margin: 1rem 0;
-      }
-      body {
-        text-align: justify;
-      }
-      img {
-        border-radius: 10px;
-      }
+        
+      } */
     </style>
     <script is:inline>
       function enableCopy(
