--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -3,6 +3,6 @@ const today = new Date();
 ---
 
 <footer>
-	<div class="text-gray-400 text-sm text-center py-8 font-mono">&copy; {today.getFullYear()} JCEKM. UNA PAGINA DE JCEKM.</div>
+	<div class="text-gray-400 text-sm text-center py-8 font-mono">&copy; {today.getFullYear()} MEXIC0DE_TUTO. UNA PAGINA DE MEXIC0DE.</div>
 </footer>
 
