--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -16,7 +16,7 @@ import MainLayout from "../layouts/MainLayout.astro";
           </h1>
 
           <p class="text-slate-600 max-w-md xl:text-lg dark:text-slate-50">
-            Bienvenidos a JCEKM_TUTO, una web de JCEKM! Tutoriales y guias sobre
+            Bienvenidos a MEXIC0DE_TUTO, una web de MEXIC0DE! Tutoriales y guias sobre
             el mundo de la tecnologia.
           </p>
           <div class="mt-2">
